adiciona Requisitos 5, 6, 7, 8, 9 e 10 finalizados

--- a/index.html
+++ b/index.html
@@ -19,7 +19,25 @@
       <button id="button-login" type="submit">Entrar</button>
     </form>
   </header>
-
+<main class="form-container">
+  <form method="get" id="evaluation-form">
+    <div class="inputs-container">
+      <input id="input-name" placeholder="Nome" type="text">
+      <input id="input-lastname" placeholder="Sobrenome" type="text">
+      <input id="input-email" placeholder="Email" type="email">
+      <label id="label" for="house">Casa:</label>
+      <select id="house">
+        <option id="gitnoria-house" value="Gitnória">Gitnória</option>
+        <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
+        <option id="corvinode-house" value="Corvinode">Corvinode</option>
+        <option id="pytherina-house" value="Pytherina">Pytherina</option>
+      </select>
+    </div>
+    </form>
+    <div>
+      <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
+    </div>
+</main>
   <script src="./script.js"></script>
 </body>
 
