adiciona correções lint:styles

--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@
           </div>
         </div>
       </section>
+      <hr>
+        <section id="satisfation-container">
+          <label id="label-rate" for="rate">Como você avalia a Trybewarts?</label>
+          <input type="radio" value="1" name="rate">1
+          <input type="radio" value="2" name="rate">2
+          <input type="radio" value="3" name="rate">3
+          <input type="radio" value="4" name="rate">4
+          <input type="radio" value="5" name="rate">5
+          <input type="radio" value="6" name="rate">6
+          <input type="radio" value="7" name="rate">7
+          <input type="radio" value="8" name="rate">8
+          <input type="radio" value="9" name="rate">9
+          <input type="radio" value="10" name="rate">10
+        </section>
     </form>
     <div>
       <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
