--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
       <hr>
       <section class="selectors-container">
         <div class="family-container">
-          <label id="label-family" for="family">
-            <p>Qual sua família?</p>
+          <p id="label-family">Qual sua família?</p>
+          <div>
+            <label for="Frontend">
+            <input id="Frontend" type="radio" name="family" value="Frontend">Família Frontend
           </label>
-          <div>
-            <input type="radio" name="family" value="Frontend">Família Frontend
-          </div>
-          <div>
-            <input type="radio" name="family" value="Backend">Família Backend
-          </div>
-          <div>
-            <input type="radio" name="family" value="FullStack">Família FullStack
-          </div>
+            <label for="Backend">
+            <input id="Backend" type="radio" name="family" value="Backend">Família Backend
+          </label>
+            <label for="FullStack">
+            <input id="FullStack" type="radio" name="family" value="FullStack">Família FullStack
+          </label>
+        </div>
         </div>
         <div class="family-container2">
           <label id="label-content" for="checkbox">Qual conteúdo você está com mais vontade de aprender?</label>
