ajusta lint e lint:styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section class="selectors-container">
         <div class="family-container">
           <p id="label-family">Qual sua família?</p>
-          <div>
+          <div id="radio-family">
             <label for="Frontend">
             <input id="Frontend" type="radio" name="family" value="Frontend">Família Frontend
           </label>
