adiciona requisitos 14 e 15 finalizados

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
           <p id="label-family">Qual sua família?</p>
           <div id="radio-family">
             <label for="Frontend">
-            <input id="Frontend" type="radio" name="family" value="Frontend">Família Frontend
-          </label>
+              <input id="Frontend" type="radio" name="family" value="Frontend">Família Frontend
+            </label>
             <label for="Backend">
-            <input id="Backend" type="radio" name="family" value="Backend">Família Backend
-          </label>
+              <input id="Backend" type="radio" name="family" value="Backend">Família Backend
+            </label>
             <label for="FullStack">
-            <input id="FullStack" type="radio" name="family" value="FullStack">Família FullStack
-          </label>
-        </div>
+              <input id="FullStack" type="radio" name="family" value="FullStack">Família FullStack
+            </label>
+          </div>
         </div>
         <div class="family-container2">
           <label id="label-content" for="checkbox">Qual conteúdo você está com mais vontade de aprender?</label>
@@ -68,19 +68,23 @@
         </div>
       </section>
       <hr>
-        <section id="satisfation-container">
-          <label id="label-rate" for="rate">Como você avalia a Trybewarts?</label>
-          <input type="radio" value="1" name="rate">1
-          <input type="radio" value="2" name="rate">2
-          <input type="radio" value="3" name="rate">3
-          <input type="radio" value="4" name="rate">4
-          <input type="radio" value="5" name="rate">5
-          <input type="radio" value="6" name="rate">6
-          <input type="radio" value="7" name="rate">7
-          <input type="radio" value="8" name="rate">8
-          <input type="radio" value="9" name="rate">9
-          <input type="radio" value="10" name="rate">10
-        </section>
+      <section id="satisfation-container">
+        <label id="label-rate" for="rate">Como você avalia a Trybewarts?</label>
+        <input type="radio" value="1" name="rate">1
+        <input type="radio" value="2" name="rate">2
+        <input type="radio" value="3" name="rate">3
+        <input type="radio" value="4" name="rate">4
+        <input type="radio" value="5" name="rate">5
+        <input type="radio" value="6" name="rate">6
+        <input type="radio" value="7" name="rate">7
+        <input type="radio" value="8" name="rate">8
+        <input type="radio" value="9" name="rate">9
+        <input type="radio" value="10" name="rate">10
+      </section>
+      <section id="comments-area">
+        <label class="textarea" for="textarea">Deixe seu comentário:</label>
+        <textarea name="" id="textarea" cols="20" rows="10" maxlength="500"></textarea>
+      </section>
     </form>
     <div>
       <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
