--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </header>
   <main class="form-container">
     <form method="get" id="evaluation-form">
+      <h1>Formulário de Avaliação</h1>
       <div class="inputs-container">
         <div class="styles-container">
           <input class="first-input" id="input-name" placeholder="Nome" type="text">
@@ -54,36 +55,40 @@
           </div>
         </div>
         <div class="family-container2">
-          <label id="label-content" for="checkbox">Qual conteúdo você está com mais vontade de aprender?</label>
+          <p id="label-content">Qual conteúdo você está com mais vontade de aprender?</p>
           <div>
-            <input type="checkbox" name="checkbox" value="HoFs">HoFs
-            <input type="checkbox" name="checkbox" value="Jest">Jest
-            <input type="checkbox" name="checkbox" value="Promises">Promises
+            <label for="conteudo1"><input id="conteudo1" type="checkbox" name="checkbox" value="HoFs">HoFs</label>
+            <label for="conteudo2"><input id="conteudo2" type="checkbox" name="checkbox" value="Jest">Jest</label>
+            <label for="conteudo3"><input id="conteudo3" type="checkbox" name="checkbox" value="Promises">Promises</label>
           </div>
           <div>
-            <input type="checkbox" name="checkbox" value="React">React
-            <input type="checkbox" name="checkbox" value="SQL">SQL
-            <input type="checkbox" name="checkbox" value="Python">Python
+            <label for="conteudo4"><input id="conteudo4" type="checkbox" name="checkbox" value="React">React</label>
+            <label for="conteudo5"><input id="conteudo5" type="checkbox" name="checkbox" value="SQL">SQL</label>
+            <label for="conteudo6"><input id="conteudo6" type="checkbox" name="checkbox" value="Python">Python</label>
           </div>
         </div>
       </section>
       <hr>
       <section id="satisfation-container">
-        <label id="label-rate" for="rate">Como você avalia a Trybewarts?</label>
-        <input type="radio" value="1" name="rate">1
-        <input type="radio" value="2" name="rate">2
-        <input type="radio" value="3" name="rate">3
-        <input type="radio" value="4" name="rate">4
-        <input type="radio" value="5" name="rate">5
-        <input type="radio" value="6" name="rate">6
-        <input type="radio" value="7" name="rate">7
-        <input type="radio" value="8" name="rate">8
-        <input type="radio" value="9" name="rate">9
-        <input type="radio" value="10" name="rate">10
+        <p id="label-rate">Como você avalia a Trybewarts?</p>
+        <label for="radio1"><input id="radio1" type="radio" value="1" name="rate">1</label>
+        <label for="radio2"><input id="radio2" type="radio" value="2" name="rate">2</label>
+        <label for="radio3"><input id="radio3" type="radio" value="3" name="rate">3</label>
+        <label for="radio4"><input id="radio4" type="radio" value="4" name="rate">4</label>
+        <label for="radio5"><input id="radio5" type="radio" value="5" name="rate">5</label>
+        <label for="radio6"><input id="radio6" type="radio" value="6" name="rate">6</label>
+        <label for="radio7"><input id="radio7" type="radio" value="7" name="rate">7</label>
+        <label for="radio8"><input id="radio8" type="radio" value="8" name="rate">8</label>
+        <label for="radio9"><input id="radio9" type="radio" value="9" name="rate">9</label>
+        <label for="radio10"><input id="radio10" type="radio" value="10" name="rate">10</label>
       </section>
       <section id="comments-area">
         <label class="textarea" for="textarea">Deixe seu comentário:</label>
         <textarea name="" id="textarea" cols="20" rows="10" maxlength="500"></textarea>
+      </section>
+      <section id="agreement-container">
+        <input id="agreement" type="checkbox">
+        <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
       </section>
     </form>
     <div>
