adiciona requisito 17 finalizado

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           <div>
             <label for="conteudo1"><input id="conteudo1" type="checkbox" name="checkbox" value="HoFs">HoFs</label>
             <label for="conteudo2"><input id="conteudo2" type="checkbox" name="checkbox" value="Jest">Jest</label>
-            <label for="conteudo3"><input id="conteudo3" type="checkbox" name="checkbox" value="Promises">Promises</label>
+            <label for="conteudo3"><input id="conteudo3" type="checkbox" name="checkbox"
+                value="Promises">Promises</label>
           </div>
           <div>
             <label for="conteudo4"><input id="conteudo4" type="checkbox" name="checkbox" value="React">React</label>
@@ -90,6 +91,7 @@
         <input id="agreement" type="checkbox">
         <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
       </section>
+      <button id="submit-btn" type="submit">Enviar</button>
     </form>
     <div>
       <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
