adiciona requisito 18 finalizado

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
         <input id="agreement" type="checkbox">
         <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
       </section>
-      <button id="submit-btn" type="submit">Enviar</button>
+      <section id="btns">
+        <button id="submit-btn" type="submit" disabled>Enviar</button>
+      </section>
     </form>
     <div>
       <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
