adiciona requisito 19 finalizado

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
       <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
     </div>
   </main>
+  <footer>Direitos reservados à Trybewarts©</footer>
   <script src="./script.js"></script>
 </body>
 
