add style resize ao textarea

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </section>
       <section id="comments-area">
         <label class="textarea" for="textarea">Deixe seu comentário:</label>
-        <textarea name="" id="textarea" cols="20" rows="10" maxlength="500"></textarea>
+        <textarea style="resize: none" name="" id="textarea" cols="20" rows="10" maxlength="500"></textarea>
       </section>
       <section id="agreement-container">
         <input id="agreement" type="checkbox">
