--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <img class="trybewarts-header-logo" src="./images/trybewarts-header-logo.svg" alt="">
     <h1 id="trybewarts-header-title">Trybewarts</h1>
     <form method="get" class="trybewarts-login">
-      <input id="email-input" name="email" type="email" placeholder="Email">
-      <input id="input-password" name="password" type="password" placeholder="Senha">
-      <button id="button-login" type="submit">Entrar</button>
+      <input class="input-trybe-login" id="email-input" name="email" type="email" placeholder="Email">
+      <input class="input-trybe-login" id="input-password" name="password" type="password" placeholder="Senha">
+      <button class="input-trybe-login" id="button-login" type="submit">Entrar</button>
     </form>
   </header>
   <main class="form-container">
@@ -86,6 +86,7 @@
       <section id="comments-area">
         <label class="textarea" for="textarea">Deixe seu comentário:</label>
         <textarea style="resize: none" name="" id="textarea" cols="20" rows="10" maxlength="500"></textarea>
+        <p id="counter">Caracteres restantes: 500</p>
       </section>
       <section id="agreement-container">
         <input id="agreement" type="checkbox">
@@ -95,7 +96,7 @@
         <button id="submit-btn" type="submit" disabled>Enviar</button>
       </section>
     </form>
-    <div>
+    <div id="img-container">
       <img id="trybewarts-forms-logo" src="./images/trybewarts-colored.svg" alt="">
     </div>
   </main>
